--- a/src/_functions.scss
+++ b/src/_functions.scss
@@ -111,9 +111,9 @@
  */
 @function relative-luminance($color) {
   $colors: (
-    'red': color.channel($color, "red", $space: rgb),
-    'green': color.channel($color, "green", $space: rgb),
-    'blue': color.channel($color, "blue", $space: rgb)
+    'red': color.channel($color, 'red', $space: rgb),
+    'green': color.channel($color, 'green', $space: rgb),
+    'blue': color.channel($color, 'blue', $space: rgb),
   );
 
   @each $name, $value in $colors {
@@ -123,12 +123,18 @@
     @if $value < 0.0393 {
       $value: math.div($value, 12.92);
     } @else {
-      $value: math.div(($value + .055), 1.055);
+      $value: math.div(($value + 0.055), 1.055);
       $value: math.pow($value, 2.4);
     }
 
-    $colors: map.merge($colors, ($name: $value));
+    $colors: map.merge(
+      $colors,
+      (
+        $name: $value,
+      )
+    );
   }
 
-  @return (map.get($colors, 'red') * .2126) + (map.get($colors, 'green') * .7152) + (map.get($colors, 'blue') * .0722);
+  @return (map.get($colors, 'red') * 0.2126) +
+    (map.get($colors, 'green') * 0.7152) + (map.get($colors, 'blue') * 0.0722);
 }
