--- a/src/c4s-s.scss
+++ b/src/c4s-s.scss
@@ -17,6 +17,6 @@ $breakpoint: s;
 @include load-modules.load-modules(
   null,
   (
-    $breakpoint: map.get(variables.$breakpoints-all, $breakpoint)
+    $breakpoint: map.get(variables.$breakpoints-all, $breakpoint),
   )
 );
