--- a/src/modules/_forms.scss
+++ b/src/modules/_forms.scss
@@ -15,7 +15,7 @@ $color: map.get(variables.$colors, 'blue');
 $background-color: white;
 
 $check-data-url: "data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 512 512'%3E%3Cpath fill='none' stroke='%23fff' stroke-linecap='round' stroke-linejoin='round' stroke-width='64' d='M416 128L192 384l-96-96'/%3E%3C/svg%3E";
-$button-group-border-radius: .5rem;
+$button-group-border-radius: 0.5rem;
 $radio-button-size: 20px;
 
 @if not $color {
@@ -28,7 +28,7 @@ $buttons: (
   'success': map.get(variables.$colors, 'green'),
   'danger': map.get(variables.$colors, 'dark-red'),
   'warning': map.get(variables.$colors, 'yellow'),
-  'info': map.get(variables.$colors, 'light-blue')
+  'info': map.get(variables.$colors, 'light-blue'),
 );
 
 @mixin forms($media: null) {
@@ -40,8 +40,8 @@ $buttons: (
       display: inline-block;
       height: 1rem;
       width: 1rem;
-      border: .125rem solid var(--checkbox-color, $color);
-      border-radius: .25rem;
+      border: 0.125rem solid var(--checkbox-color, $color);
+      border-radius: 0.25rem;
     }
 
     &:checked::before {
@@ -50,7 +50,7 @@ $buttons: (
     }
 
     &:focus::before {
-      outline: .125rem solid color.scale($color, $lightness: 50%);
+      outline: 0.125rem solid color.scale($color, $lightness: 50%);
     }
   }
 
@@ -63,8 +63,9 @@ $buttons: (
     vertical-align: middle;
     appearance: none;
     border-radius: 50%;
-    transition: all .3s ease-in-out;
-    box-shadow: inset 0 0 0 math.div($radio-button-size, 5) var(--radio-button-background-color, $background-color);
+    transition: all 0.3s ease-in-out;
+    box-shadow: inset 0 0 0 math.div($radio-button-size, 5)
+      var(--radio-button-background-color, $background-color);
     background-color: var(--radio-button-background-color, $background-color);
 
     &:checked {
@@ -82,13 +83,25 @@ $buttons: (
     }
 
     & > :first-child {
-      border-top-left-radius: var(--button-group-radius, $button-group-border-radius);
-      border-bottom-left-radius: var(--button-group-radius, $button-group-border-radius);
+      border-top-left-radius: var(
+        --button-group-radius,
+        $button-group-border-radius
+      );
+      border-bottom-left-radius: var(
+        --button-group-radius,
+        $button-group-border-radius
+      );
     }
 
     & > :last-child {
-      border-top-right-radius: var(--button-group-radius, $button-group-border-radius);
-      border-bottom-right-radius: var(--button-group-radius, $button-group-border-radius);
+      border-top-right-radius: var(
+        --button-group-radius,
+        $button-group-border-radius
+      );
+      border-bottom-right-radius: var(
+        --button-group-radius,
+        $button-group-border-radius
+      );
     }
   }
 
@@ -97,7 +110,7 @@ $buttons: (
        `translateY` prevents shifting other elements since `height` stays the same,
        unlike with `padding`, for example.
     */
-    transform: translateY(max(.14em, calc(.4em - 4px)));
+    transform: translateY(max(0.14em, calc(0.4em - 4px)));
   }
 
   @each $name, $button-color in $buttons {
@@ -107,15 +120,15 @@ $buttons: (
       --button-color: #{$button-color};
       --button-disabled-color: #{$button-disabled-color};
       --button-outline-color: #{color.scale($button-color, $lightness: 50%)};
-      --button-outline-size: .125rem;
+      --button-outline-size: 0.125rem;
 
-      @if functions.relative-luminance($button-color) > .5 {
+      @if functions.relative-luminance($button-color) > 0.5 {
         --button-text-color: black;
       } @else {
         --button-text-color: white;
       }
 
-      @if functions.relative-luminance($button-disabled-color) > .64 {
+      @if functions.relative-luminance($button-disabled-color) > 0.64 {
         --button-disabled-text-color: black;
       } @else {
         --button-disabled-text-color: white;
@@ -123,15 +136,20 @@ $buttons: (
     }
   }
 
-  .btn, .btn-primary, .btn-success, .btn-danger, .btn-warning, .btn-info {
+  .btn,
+  .btn-primary,
+  .btn-success,
+  .btn-danger,
+  .btn-warning,
+  .btn-info {
     display: inline-block;
     color: var(--button-text-color);
     background-color: var(--button-color);
-    border-width: .25rem;
+    border-width: 0.25rem;
     border-style: solid;
     border-color: var(--button-color);
-    border-radius: .5rem;
-    padding: .5rem 1rem;
+    border-radius: 0.5rem;
+    padding: 0.5rem 1rem;
     cursor: pointer;
     white-space: nowrap;
 
@@ -163,13 +181,13 @@ $buttons: (
   }
 
   .btn--small {
-    padding: .25rem .5rem;
+    padding: 0.25rem 0.5rem;
     font-size: 0.8em;
   }
 
   .btn--large {
-    --button-outline-size: .25rem;
-    padding: .75rem 1.5rem;
+    --button-outline-size: 0.25rem;
+    padding: 0.75rem 1.5rem;
     font-size: 1.5em;
   }
 }
