--- a/src/modules/_forms.scss
+++ b/src/modules/_forms.scss
@@ -162,6 +162,7 @@ $buttons: (
 
     &:where(:disabled) {
       --button-color: var(--button-disabled-color);
+
       color: var(--button-disabled-text-color);
       cursor: auto;
     }
@@ -171,23 +172,27 @@ $buttons: (
     }
   }
 
-  .btn--outline {
-    background-color: transparent;
-    color: var(--button-color);
+  // stylelint-disable-next-line no-descending-specificity
+  .btn {
+    &--outline {
+      background-color: transparent;
+      color: var(--button-color);
 
-    &:where(:disabled) {
-      color: var(--button-disabled-color);
+      &:where(:disabled) {
+        color: var(--button-disabled-color);
+      }
     }
-  }
 
-  .btn--small {
-    padding: 0.25rem 0.5rem;
-    font-size: 0.8em;
-  }
+    &--small {
+      padding: 0.25rem 0.5rem;
+      font-size: 0.8em;
+    }
 
-  .btn--large {
-    --button-outline-size: 0.25rem;
-    padding: 0.75rem 1.5rem;
-    font-size: 1.5em;
+    &--large {
+      --button-outline-size: 0.25rem;
+
+      padding: 0.75rem 1.5rem;
+      font-size: 1.5em;
+    }
   }
 }
