--- a/docs/pages/custom.njk
+++ b/docs/pages/custom.njk
@@ -9,14 +9,18 @@
 {% set description = "Create your own C4S" %}
 
 {% block content %}
+    {# Custom modules form #}
     <div class="container center ph3 mv3">
+        <h2 class="mv4 mv5-l tc-l">
+            Custom C4S stylesheet
+        </h2>
         <form
+            class="row gap"
             data-custom-modules-form
             style="display: none;"
         >
-            <div class="measure">
-                <h2>Custom C4S stylesheet</h2>
-
+            <div class="col-12 col-6-l">
+                <h3 class="mt0">Instructions</h3>
                 <b>Select&hellip;</b>
                 <ul class="list-reset pl4 mv3">
                     <li class="flex">
@@ -51,72 +55,110 @@
                     <br>
                     Generating custom stylesheets may take a while.
                 </p>
+
+                <h3>Actions</h3>
+                <div class="row gap mv4" style="--gap: .5rem;">
+                    {% set buttonClasses = "col-12 col-6-s p0 ph2 br-pill" %}
+                    <button
+                        class="{{ buttonClasses }} btn-success"
+                        type="button"
+                        data-action="enable-modules"
+                    >
+                        Enable all modules
+                    </button>
+                    <button
+                        class="{{ buttonClasses }} btn-success"
+                        type="button"
+                        data-action="enable-responsive"
+                    >
+                        Enable all responsive
+                    </button>
+                    <button
+                        class="{{ buttonClasses }} btn-danger"
+                        type="button"
+                        data-action="disable-modules"
+                    >
+                        Disable all modules
+                    </button>
+                    <button
+                        class="{{ buttonClasses }} btn-danger"
+                        type="button"
+                        data-action="disable-responsive"
+                    >
+                        Disable all responsive
+                    </button>
+                    <button
+                        class="{{ buttonClasses }} btn-warning"
+                        type="button"
+                        data-action="reset-modules"
+                    >
+                        Reset modules
+                    </button>
+                    <button
+                    class="{{ buttonClasses }} btn-warning"
+                        type="button"
+                        data-action="reset-responsive"
+                    >
+                        Reset responsive
+                    </button>
+                </div>
             </div>
 
-            <h3>Modules</h3>
-
-            <p class="flex column-gap gap flex-wrap mv4" style="--gap: .5rem;">
-                <button type="button" data-action="enable-modules">
-                    ✅ <span class="sr-only">Enable</span> all modules
-                </button>
-                <button type="button" data-action="enable-responsive">
-                    ✅ <span class="sr-only">Enable</span> all responsive
-                </button>
-                <button type="button" data-action="disable-modules">
-                    ❌ <span class="sr-only">Disable</span> all modules
-                </button>
-                <button type="button" data-action="disable-responsive">
-                    ❌ <span class="sr-only">Disable</span> all responsive
-                </button>
-            </p>
-
-            <ul class="js-reorder-list list-reset mv3 measure">
-                {% for file in files | rejectattr('isMinified') | rejectattr('isRaw') | selectattr('isModule') %}
-                    <li class="flex flex-wrap items-center ph2 ph3-m pv1 mt1-between ba br2 column-gap row-gap"
-                        draggable="true">
-                        <label class="flex-grow-1 code">
-                            <input
-                                type="checkbox"
-                                class="checkbox button-lh-fix"
-                                data-checkbox-module
-                                name="module-{{ file.name }}"
-                                {{ "checked" if file.isEnabled }}
-                            >
-                            {{ file.name }}
-                        </label>
-
-                        {% if file.responsiveAble %}
-                            <label>
+            <div>
+                <h3 class="mt0">Modules</h3>
+                <ul class="js-reorder-list list-reset mv3 measure">
+                    {% for file in files | rejectattr('isMinified') | rejectattr('isRaw') | selectattr('isModule') %}
+                        <li class="flex flex-wrap items-center ph2 ph3-m pv1 mt1-between ba br2 column-gap row-gap"
+                            draggable="true">
+                            <label class="flex-grow-1 code">
                                 <input
                                     type="checkbox"
                                     class="checkbox button-lh-fix"
-                                    data-checkbox-responsive
-                                    name="module-{{ file.name }}-responsive"
-                                    {{ "checked" if file.isResponsive }}
+                                    data-checkbox-module
+                                    name="module-{{ file.name }}"
+                                    data-initial-value="{{ file.isEnabled }}"
+                                    {{ "checked" if file.isEnabled }}
                                 >
-                                Responsive
+                                {{ file.name }}
                             </label>
-                        {% endif %}
 
-                        <div class="svg-wrapper dn db-l">
-                            {% include "docs/icons/bootstrap/grip-horizontal.svg" %}
-                        </div>
-                    </li>
-                {% endfor %}
-            </ul>
+                            {% if file.responsiveAble %}
+                                <label>
+                                    <input
+                                        type="checkbox"
+                                        class="checkbox button-lh-fix"
+                                        data-checkbox-responsive
+                                        name="module-{{ file.name }}-responsive"
+                                        data-initial-value="{{ file.isResponsive }}"
+                                        {{ "checked" if file.isResponsive }}
+                                    >
+                                    Responsive
+                                </label>
+                            {% endif %}
 
-            <label class="db mv3 p2">
-                <input type="checkbox" name="minify" class="checkbox button-lh-fix" checked>
-                Minify output
-            </label>
+                            <div class="svg-wrapper dn db-l">
+                                {% include "docs/icons/bootstrap/grip-horizontal.svg" %}
+                            </div>
+                        </li>
+                    {% endfor %}
+                </ul>
 
-            <input
-                class="btn-primary grow br-pill"
-                type="submit"
-                value="Generate custom C4S stylesheet"
-            >
+                <label class="db mv3 p2">
+                    <input type="checkbox" name="minify" class="checkbox button-lh-fix" checked>
+                    Minify output
+                </label>
+
+                <input
+                    class="btn-primary grow br-pill"
+                    type="submit"
+                    value="Generate custom C4S stylesheet"
+                >
+            </div>
         </form>
+    </div>
 
+    {# Generated CSS output #}
+    <div class="container center ph3 mv3">
         <div class="tc">
             <div
                 class="dib ph3 pv2 ba br2 f5 lh-extra"
